Made spacing fixed for mobile layout

--- a/style.css
+++ b/style.css
@@ -643,7 +643,7 @@ div.report-table-container{
     justify-content: center;
     font-family: 'Open Sans';
     font-weight: bold;
-    font-size: 1em;
+    font-size: .8em;
     color: #3890FF;
     /* add space between the links */
     padding-right: 15px;
@@ -661,7 +661,7 @@ div.report-table-container{
     border-radius: 8px;
     background-color: #3890FF;
     /*Make the div's height bigger*/
-    height: 2.2em;
+    height: 2em;
     width: 6rem;
 }
 
@@ -670,7 +670,7 @@ div.report-table-container{
     color: white;
     text-decoration: none;
     font-family: "Open Sans";
-    font-size: 1em;
+    font-size: .8em;
     font-weight: bold;
     text-align: center;
     /*position the text in the middle of the div */
@@ -746,7 +746,7 @@ div.report-table-container{
     padding-left: 10px;
     font-family: 'Open Sans';
     font-weight: bold;
-    font-size: 1em;
+    font-size: .8em;
     color: #707070;
 }
 
@@ -781,7 +781,7 @@ div.report-table-container{
     display: flex;
     flex-direction: column;
     grid-area: 1 / 1 / 2 / 2;
-    margin-top: 35%;
+    margin-top: 30%;
     margin-left: 5%;
     margin-bottom: 5%;
     position: relative;
@@ -873,7 +873,7 @@ div.report-table-container{
 
 .hp-reports{
     /*bring up the text */
-    margin-top: -5%;
+    margin-top: -6%;
 }
 
 .hp-reports h2{
@@ -1055,8 +1055,8 @@ div.report-table-container{
         align-items: center;
         padding: 0;
         margin: 0;
-        margin-top: 15%;
-        margin-bottom: 10%;
+        margin-top: 5.5rem;
+        margin-bottom: 5rem;
     }
 
     .FAO-Title{
@@ -1125,8 +1125,8 @@ div.report-table-container{
     }
 
     .hamburger-logo img{
-        /*make the logo åresponsive to screen size */
-        width: 50%;
+        /*make the logo responsive to screen size */
+        width: 60%;
         height: auto;
         padding-left: 5%;
         
@@ -1159,6 +1159,10 @@ div.report-table-container{
         text-decoration: none;
         color: black;
         background-color: #9ec2f5;
+    }
+
+    .latest-reports {
+
     }
 
     .latest-reports{
